Upnp/Api/C/CpLinnCoUkVolkano1.h


DllExport THandle CpProxyLinnCoUkVolkano1Create(CpDeviceC aDevice);
DllExport void CpProxyLinnCoUkVolkano1Destroy(THandle aHandle);
DllExport void CpProxyLinnCoUkVolkano1SyncReboot(THandle aHandle);
DllExport void CpProxyLinnCoUkVolkano1BeginReboot(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndReboot(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkVolkano1SyncBootMode(THandle aHandle, char** aaMode);
DllExport void CpProxyLinnCoUkVolkano1BeginBootMode(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndBootMode(THandle aHandle, ZappHandleAsync aAsync, char** aaMode);
DllExport void CpProxyLinnCoUkVolkano1SyncSetBootMode(THandle aHandle, const char* aaMode);
DllExport void CpProxyLinnCoUkVolkano1BeginSetBootMode(THandle aHandle, const char* aaMode, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndSetBootMode(THandle aHandle, ZappHandleAsync aAsync);
DllExport void CpProxyLinnCoUkVolkano1SyncBspType(THandle aHandle, char** aaBspType);
DllExport void CpProxyLinnCoUkVolkano1BeginBspType(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndBspType(THandle aHandle, ZappHandleAsync aAsync, char** aaBspType);
DllExport void CpProxyLinnCoUkVolkano1SyncUglyName(THandle aHandle, char** aaUglyName);
DllExport void CpProxyLinnCoUkVolkano1BeginUglyName(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndUglyName(THandle aHandle, ZappHandleAsync aAsync, char** aaUglyName);
DllExport void CpProxyLinnCoUkVolkano1SyncMacAddress(THandle aHandle, char** aaMacAddress);
DllExport void CpProxyLinnCoUkVolkano1BeginMacAddress(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndMacAddress(THandle aHandle, ZappHandleAsync aAsync, char** aaMacAddress);
DllExport void CpProxyLinnCoUkVolkano1SyncProductId(THandle aHandle, char** aaProductNumber);
DllExport void CpProxyLinnCoUkVolkano1BeginProductId(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndProductId(THandle aHandle, ZappHandleAsync aAsync, char** aaProductNumber);
DllExport void CpProxyLinnCoUkVolkano1SyncBoardId(THandle aHandle, uint32_t aaIndex, char** aaBoardNumber);
DllExport void CpProxyLinnCoUkVolkano1BeginBoardId(THandle aHandle, uint32_t aaIndex, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndBoardId(THandle aHandle, ZappHandleAsync aAsync, char** aaBoardNumber);
DllExport void CpProxyLinnCoUkVolkano1SyncBoardType(THandle aHandle, uint32_t aaIndex, char** aaBoardNumber);
DllExport void CpProxyLinnCoUkVolkano1BeginBoardType(THandle aHandle, uint32_t aaIndex, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndBoardType(THandle aHandle, ZappHandleAsync aAsync, char** aaBoardNumber);
DllExport void CpProxyLinnCoUkVolkano1SyncMaxBoards(THandle aHandle, uint32_t* aaMaxBoards);
DllExport void CpProxyLinnCoUkVolkano1BeginMaxBoards(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndMaxBoards(THandle aHandle, ZappHandleAsync aAsync, uint32_t* aaMaxBoards);
DllExport void CpProxyLinnCoUkVolkano1SyncSoftwareVersion(THandle aHandle, char** aaSoftwareVersion);
DllExport void CpProxyLinnCoUkVolkano1BeginSoftwareVersion(THandle aHandle, ZappCallbackAsync aCallback, void* aPtr);
DllExport int32_t CpProxyLinnCoUkVolkano1EndSoftwareVersion(THandle aHandle, ZappHandleAsync aAsync, char** aaSoftwareVersion);